# rust-dispatch

./: Cargo.toml  Makefile  README.md
scripts/: cargo_format.sh
src/: common.rs  enum_dispatch.rs  lib.rs  main.rs  static_dispatch.rs
src/static_dispatch/: function_code.rs  method_code.rs  repository_pattern.rs  repository_pattern_without_impl.rs
